--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,38 @@
 {
-  "MongoDbSettings": {
-    "ConnectionString": "mongodb+srv://pabasaratest224:123FeTest@cluster0.ze0s8kq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
-    "DatabaseName": "Test_DB_Iot_FE"
+  "ConnectionStrings": {
+    // Tharaka Local DB
+    "DefaultConnection": "Server=BGL-DTS29\\SQLEXPRESS;Initial Catalog=AssestRegistry;Persist Security Info=False;Integrated Security=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+
+  "Application": {
+    "Version": "2.6.1",
+    "BusinessCentralEnvironment": "PRODUCTION"
+
+  },
+
+  "SMS": {
+    "Endpoint": "https://richcommunication.dialog.lk/api/sms/send",
+    "User": "brown_user",
+    "Digest": "f989c2b1aa8c44cd3e4cbbeb6d3e63a8",
+    "Mask": "SmartAssist"
+  },
+
+  "AllowedHosts": "*",
+
+  "JWT": {
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
+  },
+
+  "BusinessCentralHub": {
+    "apiUrl": "https://api.businesscentral.dynamics.com/v2.0/887d4ad8-d67d-4f2d-b3ca-750faf30c5f7",
+    "businessCentalEnvironment": "PRODUCTION"
+  }
+
 }
