--- a/AssetRegistry.csproj
+++ b/AssetRegistry.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.22">
@@ -20,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	<Folder Include="Migrations\" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
